--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 
     <script type="module" src="src/event.js"></script>
+    <script type="module" src="src/shadersrc.js"></script>
+    <script type="module" src="src/shader.js"></script>
+    <script type="module" src="src/mesh.js"></script>
     <script type="module" src="src/canvas.js"></script>
     <script type="module" src="src/core.js"></script>
 
