Transformations, at least partially working

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body style="overflow: hidden; background-color: black; cursor: none; color: white">
 
+    <script src="lib/gl-matrix-min.js"></script>
 
     <script type="module" src="src/event.js"></script>
     <script type="module" src="src/shadersrc.js"></script>
     <script type="module" src="src/shader.js"></script>
     <script type="module" src="src/mesh.js"></script>
+    <script type="module" src="src/transform.js"></script>
     <script type="module" src="src/canvas.js"></script>
     <script type="module" src="src/core.js"></script>
 
