--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script type="module" src="src/shader.js"></script>
     <script type="module" src="src/mesh.js"></script>
     <script type="module" src="src/transform.js"></script>
+    <script type="module" src="src/texture.js"></script>
+    <script type="module" src="src/assets.js"></script>
     <script type="module" src="src/canvas.js"></script>
     <script type="module" src="src/core.js"></script>
 
