Lighting, fog & model loading

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body style="overflow: hidden; background-color: black; cursor: none; color: white">
 
     <script src="lib/gl-matrix-min.js"></script>
+    <script src="lib/webgl-obj-loader.min.js"></script>
 
     <script type="module" src="src/event.js"></script>
     <script type="module" src="src/shadersrc.js"></script>
