--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="lib/webgl-obj-loader.min.js"></script>
 
     <script type="module" src="src/event.js"></script>
+    <script type="module" src="src/input.js"></script>
+    <script type="module" src="src/vector.js"></script>
+    <script type="module" src="src/util.js"></script>
     <script type="module" src="src/shadersrc.js"></script>
     <script type="module" src="src/shader.js"></script>
     <script type="module" src="src/mesh.js"></script>
