--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="module" src="src/canvas.js"></script>
     <script type="module" src="src/core.js"></script>
 
+    <script type="module" src="src/racer.js"></script>
     <script type="module" src="src/game.js"></script>
 
     <script type="module" src="src/main.js"></script>
